[gd_scene load_steps=5 format=3 uid="uid://dqp6x36vhcvjl"]

[ext_resource type="StyleBox" uid="uid://boyhwcuefkdjp" path="res://Panel.tres" id="1_isk1a"]
[ext_resource type="Script" path="res://UI/Breeding_Row/Breeding_Row.gd" id="2_ng7s7"]
[ext_resource type="PackedScene" uid="uid://bdm8heeojuy7h" path="res://UI/Common/ItemSlot.tscn" id="3_yhq35"]
[ext_resource type="PackedScene" uid="uid://cc3evauixtx3l" path="res://UI/Common/ProgressArrow.tscn" id="4_c1pq2"]

[node name="BreedingRow" type="PanelContainer"]
offset_right = 200.0
offset_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_isk1a")
script = ExtResource("2_ng7s7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Input1" parent="HBoxContainer" instance=ExtResource("3_yhq35")]
unique_name_in_owner = true
layout_mode = 2

[node name="Input2" parent="HBoxContainer" instance=ExtResource("3_yhq35")]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressArrow" parent="HBoxContainer" instance=ExtResource("4_c1pq2")]
unique_name_in_owner = true
layout_mode = 2

[node name="Output" parent="HBoxContainer" instance=ExtResource("3_yhq35")]
unique_name_in_owner = true
layout_mode = 2
dropable = false
